# notemine_hw

./: .gitignore  Cargo.toml  README.md  event.json  flake.nix  test_rpc.sh
deploy/physical/plebhash_dev/: README.md
docs/: bolt11.md
img/: logo.xcf
src/: lib.rs  main.rs
src/lib/: args.rs  client.rs  error.rs  hashrate.rs  miner.rs  mod.rs  sell.rs  service.rs  types.rs
test/: mine.sh
