[package]
name = "notemine_hw"
version = "0.3.0"
edition = "2021"
description = "a nostr note miner with hardware acceleration"
repository = "https://github.com/plebemineira/notemine_hw"
license = "GPL-3.0-only"

[lib]
name = "notemine"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
tracing = { version = "0.1" }
tracing-subscriber = "0.3"
clap = { version = "^4.5.4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"