[package]
name = "notemine_hw"
version = "0.3.0"
edition = "2021"
description = "a nostr note miner with hardware acceleration"
repository = "https://github.com/plebemineira/notemine_hw"
license = "GPL-3.0-only"

[lib]
name = "notemine"
path = "src/lib/mod.rs"

[dependencies]
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
num-bigint = "0.4"
circular-buffer = "0.1.7"
tracing = { version = "0.1" }
tracing-subscriber = "0.3"
clap = { version = "^4.5.4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
nostr-sdk = "0.34.0"
nostr-signer = "0.34.0"
tabled = "0.16.0"